Downgrade code to Java 11 compatibility